--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "main": "index.js",
     "scripts": {
-        "test": "npm test"
+        "test": "./node_modules/.bin/mocha test/**/*_spec.js"
     },
     "repository": {
         "type": "git",
@@ -24,5 +24,9 @@
     },
     "engines": {
         "node": "*"
+    },
+    "devDependencies": {
+        "chai": "^1.9.1",
+        "mocha": "^1.20.1"
     }
 }
