--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "keywords": [
         "mongoose"
     ],
-    "author": "Steffen Leistner",
+    "author": "Steffen Leistner <sleistner@gmail.com>",
+    "contributors": [
+        "Sascha Teske <sascha.teske@gmail.com>"
+    ],
     "license": "ISC",
     "dependencies": {
         "async": "^0.9.0",
-        "mkdirp": "^0.5.0",
         "mongoose": "^3.8.12",
+        "mv": "^2.0.1",
         "rimraf": "^2.2.8"
     },
     "engines": {
@@ -27,6 +30,7 @@
     },
     "devDependencies": {
         "chai": "^1.9.1",
+        "lodash": "^2.4.1",
         "mocha": "^1.20.1"
     }
 }
