Add jscs validation.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha test/**/*_spec.js"
+    "validate": "jscs . --config=./.jscsrc --reporter=inline"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "async": "^0.9.0",
     "chai": "^1.9.1",
+    "jscs": "^1.8.1",
     "lodash": "^2.4.1",
     "mocha": "^1.20.1"
   }
