--- a/.jscsrc
+++ b/.jscsrc
@@ -1,14 +1,17 @@
 {
-	"requireSpaceAfterKeywords": [
-	    "if",
-	    "else",
-	    "for",
-	    "while",
-	    "do",
-	    "switch",
-	    "return",
-	    "try",
-	    "catch",
-	    "function"
-	]
+    "disallowMixedSpacesAndTabs": true,
+    "excludeFiles": ["node_modules/**"],
+    "requireSpaceAfterKeywords": [
+        "if",
+        "else",
+        "for",
+        "while",
+        "do",
+        "switch",
+        "return",
+        "try",
+        "catch",
+        "function"
+    ],
+    "validateIndentation": 4
 }
